objects/Order_Role__c.object
<CustomObject>
    <description>This table contains mappings of contacts related to an order</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Sold To Account on the Order.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Roles (Account)</relationshipLabel>
        <relationshipName>Order_Roles</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact Record Linkage for Order Contact Role</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Order_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Has_Open_Case__c</fullName>
        <formula>Order__r.Has_Open_Case__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Open Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merchandise_Sub_Total__c</fullName>
        <formula>Order__r.Merchandise_Subtotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merchandise Sub Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Closed__c</fullName>
        <description>For use by the Timeline app</description>
        <formula>ISPICKVAL(Order__r.Status__c, &quot;Closed&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <formula>Order__r.Order_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Open__c</fullName>
        <description>For use by the Timeline app</description>
        <formula>ISPICKVAL(Order__r.Status__c, &quot;Open&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Role__c</fullName>
        <label>Order Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Affiliated Person</fullName>
                </value>
                <value>
                    <fullName>RH Designer</fullName>
                </value>
                <value>
                    <fullName>External Designer</fullName>
                </value>
                <value>
                    <fullName>Ship To</fullName>
                </value>
                <value>
                    <fullName>Sold To</fullName>
                </value>
                <value>
                    <fullName>Partial Ship To</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Ship_To_Status__c</fullName>
        <formula>Ship_To__r.Order_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Ship To Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Status_Other__c</fullName>
        <description>For use by the Timeline app</description>
        <formula>!(ISPICKVAL(Order__r.Status__c, &quot;Open&quot;) || ISPICKVAL(Order__r.Status__c, &quot;Closed&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Status Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <formula>TEXT(Order__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>RH_Order__c</referenceTo>
        <relationshipName>Order_Contact_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Preferred_Email__c</fullName>
        <label>Preferred Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Preferred_Phone__c</fullName>
        <label>Preferred Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For data model build out: how viable is the design with ship to and order populated</description>
        <label>Ship To</label>
        <referenceTo>Ship_To__c</referenceTo>
        <relationshipLabel>Order Roles</relationshipLabel>
        <relationshipName>Order_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sort_Key__c</fullName>
        <formula>VALUE(Order__r.Name &amp; TEXT(0.1/VALUE(IF(ISNULL(Ship_To__r.Name),&apos;1&apos;,Ship_To__r.Name))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sort Key</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <formula>Contact__r.Tier_Display__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Order_Amount__c</fullName>
        <formula>Order__r.Total_Order_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Order Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Order Role</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Order_Date__c</columns>
        <columns>Total_Order_Amount__c</columns>
        <columns>Order_Role__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OR-{0000000}</displayFormat>
        <label>Order Role ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>